# eVera

./: .codecov.yml  .dockerignore  .env.example  .gitignore  .vercelignore  0.2.30  0.3  1.40.0  1.7.0  2.0.0  3.0  4.12.0  5.0  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEPLOYMENT.md  DISTRIBUTION.md  Dockerfile  INSTALL.md  LICENSE  Makefile  NOTICE  README.md  RELEASE_NOTES_v0.9.0.md  SETUP_GUIDE.md  audit.py  build_backend.py  config.py  deploy.py  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  docker-entrypoint.sh  generate_icons.py  install.sh  main.py  mkdocs.yml  pyproject.toml  requirements.txt  (+12 more)
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  build.yml  ci.yml  codeql.yml  docker-build.yml  evera.yml  nightly.yml  release.yml  test-coverage.yml  video-build.yml  weekly.yml
deploy/nginx/: nginx.conf
docs/: Doxyfile  agents.md  api_reference.md  architecture.md  configuration.md  development.md  diagrams.md  doxygen_main_page.md  faq.md  generate_diagrams.py  getting_started.md  index.md  mobile_protocol.md  release_notes_v0.5.0.md  requirements.txt  security.md
docs/book/: book.md  references.bib
docs/site/: index.html
electron/: build.js  main.js  package-lock.json  package.json  preload.js
evera/location/: osm_client.py
extension/: background.js  content.css  content.js  manifest.json  options.html  options.js  popup.html  popup.js  sidepanel.html  sidepanel.js
mobile/: README.md  app.json  package.json  tsconfig.json
mobile/android/: build.gradle  gradle.properties  settings.gradle
mobile/src/: App.tsx
navigation/: geolocator.py
plugins/: live_trading.py
promo/: generate_audio.py  promo_scene.py
scripts/: build_windows.ps1  setup.ps1
tests/: conftest.py  test_admin.py  test_agents.py  test_api.py  test_benchmarks.py  test_coder_paths.py  test_content_creator.py  test_coverage_boost.py  test_data_breach.py  test_email_manager.py  test_env_writer.py  test_events.py  test_finance.py  test_foundation.py  test_graph.py  test_gui.py  test_language.py  test_live_trading.py  test_memory.py  test_memory_extended.py  test_mobile_control.py  test_monitoring.py  test_new_agents_registry.py  test_new_agents_routing.py  test_new_agents_tools.py  test_operator_extended.py  test_performance.py  test_playwright_install.py  test_plugins.py  test_production_hardening.py  test_production_readiness.py  test_provider_stream.py  test_rbac.py  test_router.py  test_safety.py  test_sanity.py  test_scheduler.py  test_scheduler_and_providers.py  test_security.py  test_security_hardening.py  (+7 more)
tests/functional/: test_functional_e2e.py  test_gps_client.py
tests/performance/: test_performance_benchmarks.py
tests/simulation/: test_emulation_simulation.py
tests/unit/: test_new_agents.py  test_operating_mode.py  test_osm_client.py  test_unit_core.py
tests_backup/: conftest.py  test_agents.py  test_benchmarks.py  test_content_creator.py  test_env_writer.py  test_events.py  test_gui.py  test_media_factory.py  test_new_agents_tools.py  test_operator_extended.py  test_perf_benchmark.py  test_performance.py  test_provider_stream.py  test_rbac.py  test_router.py  test_safety.py  test_sanity.py  test_security.py  test_setup_wizards.py  test_staging_monitoring.py  test_voice_personality.py  test_voice_server.py  test_wake_word.py  test_workflow.py
vera/: __init__.py  app.py  core.py  messaging.py  network_zones.py  operating_mode.py  rbac.py  scheduler.py
vera/action/: __init__.py  chime.py  executor.py  tts.py
vera/brain/: __init__.py  crew.py  graph.py  language.py  orchestrator.py  plugins.py  router.py  state.py  supervisor.py  workflow.py
vera/emotional/: __init__.py  mood_tracker.py  pattern_detector.py  sentiment.py
vera/events/: __init__.py  bus.py
vera/knowledge/: __init__.py  chunker.py  parsers.py  rag.py
vera/memory/: __init__.py  embedder.py  episodic.py  fact_extractor.py  persistence.py  secure.py  semantic.py  vault.py  working.py
vera/messaging/: whatsapp.py  whatsapp_bridge.js
vera/monitoring/: __init__.py  alerts.py  health.py  metrics.py
vera/perception/: __init__.py  audio_stream.py  session.py  vad.py  wake_word.py
vera/providers/: __init__.py  manager.py  models.py  virtual_router.py
vera/safety/: __init__.py  policy.py  privacy.py
vera/static/: agents-view.js  app.js  code-viewer.html  code-viewer.js  diagram-viewer.js  diagrams.html  face.js  geolocation.js  gesture-engine.js  graphify.js  i18n.js  index.html  listener.js  manifest.json  pipeline-view.js  style.css  sw.js  waveform.js
vera/utils/: env_writer.py  gui_runner.py
voca/: __init__.py  app.py  core.py  messaging.py  rbac.py  scheduler.py
voca/action/: __init__.py  executor.py  tts.py
voca/brain/: __init__.py  crew.py  graph.py  language.py  plugins.py  router.py  state.py  supervisor.py  workflow.py
voca/events/: __init__.py  bus.py
voca/memory/: __init__.py  episodic.py  persistence.py  secure.py  vault.py  working.py
voca/perception/: __init__.py  audio_stream.py  stt.py
voca/providers/: __init__.py  manager.py  models.py
voca/safety/: __init__.py  policy.py  privacy.py
voca/static/: agents-view.js  app.js  face.js  index.html  listener.js  manifest.json  style.css  sw.js  waveform.js
vscode-extension/: README.md  package.json
vscode-extension/src/: agentsViewProvider.ts  apiClient.ts  chatViewProvider.ts  extension.ts  inlineCompletionProvider.ts  modelsViewProvider.ts
(+98 files in other folders)
