[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voca"
version = "0.3.1"
description = "Voice-first multi-agent AI buddy with 9 agents, 69 tools, and integrations for system control, web browsing, stock trading, smart home, and more"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Srikanth Patchava", email = "spatchava@meta.com"},
]
keywords = ["ai", "assistant", "voice", "multi-agent", "automation", "trading", "smart-home"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Home Automation",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "litellm>=1.40",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "sentence-transformers>=2.2",
    "faiss-cpu>=1.7",
    "cryptography>=41.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.25",
    "websockets>=12.0",
    "httpx>=0.27",
    "duckduckgo-search>=5.0",
    "beautifulsoup4>=4.12",
    "yfinance>=0.2.30",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.0",
    "sounddevice>=0.4.6",
    "webrtcvad>=2.0.10",
    "numpy>=1.24",
    "pyttsx3>=2.90",
]
browser = [
    "playwright>=1.40",
]
trading = [
    "alpaca-trade-api>=3.0",
    "ib_insync>=0.9.86",
]
all = [
    "voca[voice,browser,trading]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "httpx>=0.27",
    "ruff>=0.3",
    "safety>=3.0",
    "bandit>=1.7",
]

[project.scripts]
voca = "main:main"

[project.urls]
Homepage = "https://github.com/patchava-sr/eVoca"
Repository = "https://github.com/patchava-sr/eVoca"
Documentation = "https://github.com/patchava-sr/eVoca#readme"
Changelog = "https://github.com/patchava-sr/eVoca/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
