[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vera"
version = "1.0.0"
description = "Voice-first multi-agent AI assistant with 43+ agents, 278+ tools, 3D holographic avatar, glassmorphism UI, Electron desktop app, React Native mobile, and office automation"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Srikanth Patchava", email = "spatchava@meta.com"},
]
keywords = ["ai", "assistant", "voice", "multi-agent", "automation", "trading", "smart-home"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Home Automation",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "litellm>=1.40",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.2.0",
    "sentence-transformers>=2.2",
    "faiss-cpu>=1.7",
    "cryptography>=41.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.25",
    "websockets>=12.0",
    "httpx>=0.27",
    "duckduckgo-search>=5.0",
    "beautifulsoup4>=4.12",
    "yfinance>=0.2.30",
    "pyautogui>=0.9.54",
    "psutil>=5.9.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.0",
    "sounddevice>=0.4.6",
    "webrtcvad>=2.0.10",
    "numpy>=1.24",
    "pyttsx3>=2.90",
    "edge-tts>=6.1",
]
browser = [
    "playwright>=1.40",
]
trading = [
    "alpaca-trade-api>=3.0",
    "ib_insync>=0.9.86",
]
media = [
    "moviepy>=2.0",
    "Pillow>=10.0",
    "rembg>=2.0",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
]
all = [
    "vera[voice,browser,trading,media]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "httpx>=0.27",
    "ruff>=0.3",
    "safety>=3.0",
    "bandit>=1.7",
    "pyinstaller>=6.0",
]

[project.scripts]
vera = "main:main"

[project.urls]
Homepage = "https://github.com/srpatcha/eVera"
Repository = "https://github.com/srpatcha/eVera"
Documentation = "https://github.com/srpatcha/eVera#readme"
Changelog = "https://github.com/srpatcha/eVera/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.setuptools.packages.find]
include = ["vera*"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "E741", "F401", "F841", "UP042"]


[tool.coverage.run]
source = ["vera"]
branch = true
omit = [
    "tests/*",
    "scripts/*",
    "setup_vera.py",
    "build_backend.py",
    "deploy.py",
]

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 50
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__",
    "raise NotImplementedError",
    "except ImportError",
]
